--- a/publication/narabizi-adaptation/cite.bib
+++ b/publication/narabizi-adaptation/cite.bib
@@ -1,12 +1,8 @@
-@misc{srivastava:hal-02270527,
-  TITLE = {{Unsupervised Learning for Handling Code-Mixed Data: A Case Study on POS Tagging of North-African Arabizi Dialect}},
-  AUTHOR = {Srivastava, Abhishek and Muller, Benjamin and Seddah, Djam{\'e}},
-  URL = {https://hal.archives-ouvertes.fr/hal-02270527},
-  NOTE = {Poster},
-  HOWPUBLISHED = {{EurNLP -  First annual EurNLP}},
-  YEAR = {2019},
-  MONTH = Oct,
-  PDF = {https://hal.archives-ouvertes.fr/hal-02270527/file/poster-EURNLP.pdf},
-  HAL_ID = {hal-02270527},
-  HAL_VERSION = {v1},
+@article{Muller2020CanML,
+  title={Can Multilingual Language Models Transfer to an Unseen Dialect? A Case Study on North African Arabizi},
+  author={Benjamin Muller and Beno{\^i}t Sagot and Djam{\'e} Seddah},
+  journal={ArXiv},
+  year={2020},
+  volume={abs/2005.00318},
+  url={https://api.semanticscholar.org/CorpusID:218470572}
 }
